<resources>
    <string name="app_name">KBSU Student Assistance</string>
    <string name="second_name_hint">Second name</string>
    <string name="record_book_hint">Record book number</string>
    <string name="authorisation">Log in</string>
    <string name="second_name_is_empty">Second name is empty</string>
    <string name="second_name_too_short">Second name length is too short</string>
    <string name="record_book_is_empty">Record book number is empty</string>
    <string name="record_book_too_short">Record book number length is too short</string>
    <string name="field_contains_invalid_character">Filed contains invalid characters</string>
    <string name="something_went_wrong">Something went wrong. Try again later</string>
    <string name="connection_timeout">Request timed out</string>
    <string name="failed_to_connect_to_server">Failed to connect to server. Please, try again later</string>
    <string name="request_illegal_state">Unable to make request</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="server_unavailable">Server is unavailable</string>
    <string name="requested_info_not_found">The requested information was not found</string>
    <string name="request_timeout_error">Response timed out</string>
    <string name="unknown_error_code">Unknown error code</string>
    <string name="schedule">Schedule</string>
    <string name="navigation">Navigation</string>
    <string name="open_on_map">Open on map</string>
    <string name="make_a_path">Make a path</string>

    <!--Locations name-->
    <string name="main_entrance">Main building</string>
    <string name="iopam">Institute of Physics and Mathematics</string>
    <string name="information_centre">Information centre</string>
    <string name="fom">Faculty of Medicine</string>
    <string name="sports_complex">Sports complex</string>
    <string name="iodams">Institute of Dentistry and Maxillofacial Surgery</string>
    <string name="ioacd">Institute of Architecture, Construction and Design</string>
    <string name="eatf">Engineering and technical faculty</string>
    <!--Locations name-->

    <string name="classroom_placeholder">Classroom №%s</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="pass">Pass</string>
    <string name="qr_code_image_view_desc">This image contains QR Code which should be used as pass</string>

    <string name="year_placeholder">Year: %s</string>
    <string name="bring_your_phone_to_the_scanner">Bring your phone to the scanner</string>

    <string name="settings">Settings</string>

    <string name="logout_key" translatable="false">logout_key</string>
    <string name="warning">Warning</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="ok">OK</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="theme">Theme</string>

    <string-array name="modes">
        <item name="system">System default</item>
        <item name="light">Light</item>
        <item name="dark">Dark</item>
    </string-array>

    <string-array name="modes_values">
        <item name="system">system</item>
        <item name="light">light</item>
        <item name="dark">dark</item>
    </string-array>

    <string name="mode" translatable="false">mode</string>
    <string name="system_default_summary">System default</string>
    <string name="light_summary">Light</string>
    <string name="dark_summary">Dark</string>
    <string name="yandex_maps">Yandex Maps</string>
    <string name="google_maps">Google Maps</string>
    <string name="make_a_path_error">No supported apps to display path</string>
    <string name="unable_to_load_schedule">Unable to load schedule</string>
    <string name="install_yandex_maps">Install Yandex.Maps</string>
    <string name="log_out">Log out</string>
</resources>