<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_shape"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/errorMessage"
        android:gravity="center"
        android:textColor="?primaryTextColor"
        android:textSize="@dimen/default_text_size"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:drawableTopCompat="@drawable/ic_error_icon"
        tools:text="@string/request_timeout_error"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onTryButton"
        android:text="@string/try_again"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</LinearLayout>