<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:textColor="@color/black"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name_text_view"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryTextStyle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_name_text_input_layout"
        android:layout_marginTop="@dimen/elements_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_name_text_input_edit_text"
            android:hint="@string/second_name_hint"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/record_book_number_text_input_layout"
        android:layout_marginTop="@dimen/elements_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/record_book_number_text_input_edit_text"
            android:hint="@string/record_book_hint"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:text="@string/authorisation"
        android:layout_marginTop="@dimen/elements_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
