<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/default_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondName"
            android:hint="@string/second_name_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recordBookNumberTextInputLayout"
        android:layout_marginTop="@dimen/elements_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recordBookNumber"
            android:hint="@string/record_book_hint"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/authorisation"
        android:layout_marginTop="@dimen/elements_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="?attr/colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>